tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_enum_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum List<T> {
  Nil,
  Cons({current: T, next: List<T>})
}

let bomb = <A>(xs: List<A>): Boolean =>
  switch (xs) {
    case Nil: true
    case Cons({current: _, next: Nil}): true
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_enum_1.kk:7:3
  │
7 │   switch (xs) {
  │   ^^^^^^ Non-exhaustive cases
  │
  = Missing case(s):

      case Cons({ current: _, next: Cons(_) }):
